--- a/package.json
+++ b/package.json
@@ -3,18 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@crello/react-lottie": "0.0.9",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/system": "^4.9.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-boost": "^0.4.7",
+    "devextreme": "^19.2.6",
+    "devextreme-react": "^19.2.6",
+    "graphql": "^14.6.0",
+    "leaflet": "^1.6.0",
+    "mui-datatables": "^2.14.0",
     "react": "^16.13.0",
+    "react-apollo": "^3.1.3",
+    "react-country-flag": "^2.0.1",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-leaflet": "^2.6.3",
+    "react-number-format": "^4.4.1",
+    "react-responsive": "^8.0.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "rimraf": "^3.0.2",
+    "styled-components": "^5.0.1",
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rimraf build"
   },
   "eslintConfig": {
     "extends": "react-app"
